2002-07-21  Roman Hodek  <roman@hodek.net>

	* 0.7.1 released!!
	
	* debian/changelog, gnocatan.spec: bump version number to 0.7.1.
	
	* client/gui.c (menu_settings_cb): use GTK_EXPAND attribute in x
	dir (looks better). Delay signal_connect calls for language
	buttons to avoid gtk assertation failures.

2002-07-09  Roman Hodek  <roman@hodek.net>

	* ai/greedy.c: Introduce better, situation-related chat messages.

	* ai/client.c (client_chat): obey chatty parameter, call
	computer_funcs.chat() with occasion parameters

	* ai/client.c: added hooks for client_chat()

	* ai/client.h, ai/computer: changed prototypes for client_chat()
	et al.

	* po/de.po: updated	
	
2002-07-06  Jeff Breidenbach  <jeff@jab.org>

	* debian/rules: package upstream changelog, readme

2002-07-06  Roman Hodek  <roman@hodek.net>

	* theme.c, theme.h: new files for theme handling

	* client/Makefile.am: added theme.[ch], added hook for installing
	theme data

	* client/gnocatan.c: call init_themes()

	* client/gui.c (menu_settings_cb, settings_apply_cb): new option
	menu to select theme added to setting dialog

	* client/guimap.c: in many places replace hardcoded pixmaps/colors
	by what's defined in current theme

	* client/guimap.h: New parameter 'terrain' for draw_dice_roll().

	* client/histogram.c: pass new parameter to draw_dice_roll().

	* po/de.po: updated

2002-06-19  Jeff Breidenbach  <jeff@jab.org>

	* debian/rules: adapt to non-temporary Makefile.in files

2002-06-17  Roman Hodek  <roman@hodek.net>

	* ai/ai.c (main): result of getopt must be stored in an int.

	* client/connect.c (connect_create_dlg): saved_meta_server must be
	strdup-ped if coming from env or fixed str.

2002-06-12  Jeff Breidenbach  <jab@debian.org>

	* debian/control: package description tweaks 

2002-06-09  Roman Hodek  <roman@hodek.net>

	* ai/greedy.c (greedy_consider_quote, trade_desired), ai/trade.c,
	ai/client.c: new functions to make AI respond to trade requests;